[package]
name = "tea_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tea"
path = "src/tea.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
